// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  Hi 
  save
</div>
`;

exports[`matches snapshot 2`] = `
<div
  className="button-style"
  data-testid="button"
>
  Hi 
  Click me please
</div>
`;

exports[`matches snapshot1 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  Hi 
  save
</div>
`;

exports[`matches snapshot2 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  Hi 
  Click me please
</div>
`;
